Add about image for mobile

--- a/src/app/about/page.mdx
+++ b/src/app/about/page.mdx
@@ -1,8 +1,16 @@
+import { EasyImage } from "@/components/EasyImage/EasyImage";
+import { AspectRatio } from "@/types/ImageConfig";
+
 ## About me
 
-I've been working as a software engineer since 2020, when a fantastic group of folks gave me a chance after three years teaching myself to code.
+I've been working as a software engineer since 2020, when a fantastic group of folks
+gave me a chance after three years teaching myself to code.
 
 I'm currently working as a tech lead at Axios, where I run the Research, Automation, and Development team. I'm lucky enough to work with a team that trusts each other completely and who stretches my imagination.
+
+<div className="mobile" style={{ marginBlock: "var(--intersection-spacing)" }}>
+  <EasyImage url="/us.webp" aspectRatio={AspectRatio.SQUARE} />
+</div>
 
 ## Current fixation
 
