Better mermaid styling and a post about how to do it.

--- a/src/app/about/page.mdx
+++ b/src/app/about/page.mdx
@@ -25,7 +25,7 @@ Now, I'm obsessed with getting back a roll of developed film from the store beca
 - _Small Things Like These_ by Claire Keegan
 - Tunic (PS5)
 
-## My favorite possessions
+## My favorite purchases
 
 I don't buy much, but I try to buy things that last and which will bring me joy. Here are a few things I'm glad I bought (no sponsorship or affiliation):
 
