ChatGPT Workout + Skeleton + Clean up notes

--- a/src/app/notes/two-way-doors/page.mdx
+++ b/src/app/notes/two-way-doors/page.mdx
@@ -9,6 +9,13 @@ export const metadata = {
 
 # Two-way doors
 
-[Two-way doors](https://www.inc.com/jeff-haden/amazon-founder-jeff-bezos-this-is-how-successful-people-make-such-smart-decisions.html) are a simple framework for making decisions that are easy to reverse. This idea was popularized by Jeff Bezos at Amazon.
+[Two-way doors](https://www.inc.com/jeff-haden/amazon-founder-jeff-bezos-this-is-how-successful-people-make-such-smart-decisions.html)<sup>1</sup> are a simple framework for making decisions that are easy to reverse. This idea was popularized by Jeff Bezos at Amazon in a letter to shareholders <sup>2</sup> in 2016, where he described two types of decisions:
 
-The idea is that some decisions are like one-way doors: once you go through them, you can't go back without significant effort (if at all). Other decisions are like two-way doors: you can go through them, but you can also go back if you need to.
+> "Some decisions are consequential and irreversible or nearly irreversible – one-way doors – and these decisions must be made methodically, carefully, slowly, with great deliberation and consultation. If you walk through and don’t like what you see on the other side, you can’t get back to where you were before. We can call these Type 1 decisions.
+>
+> But most decisions aren’t like that – they are changeable, reversible – they’re two-way doors. If you’ve made a suboptimal Type 2 decision, you don’t have to live with the consequences for that long. You can reopen the door and go back through. Type 2 decisions can and should be made quickly by high judgment individuals or small groups."
+
+## Sources
+
+1. Jeff Haden, "Amazon Founder Jeff Bezos: This Is How Successful People Make Such Smart Decisions", _Inc._, https://www.inc.com/jeff-haden/amazon-founder-jeff-bezos-this-is-how-successful-people-make-such-smart-decisions.html.
+2. Jeff Bezos, _Letter to Shareholders_, Amazon, Inc., April 6, 2016, https://www.sec.gov/Archives/edgar/data/1018724/000119312516530910/d168744dex991.htm.
